client/scss/project/blocks/task-item.scss
%i-task-item-col {
  display: table-cell;
  vertical-align: middle;
  border-bottom: 1px solid $gray-scale-2;
}

%i-task-item__button {
  @include font-bold(9px);
  float: right;
  width: $task-item__button-width;
  height: 100%;
  padding: 0;
  border-left: 1px solid $gray-scale-0;
  text-transform: uppercase;
}
%text-in-one-line {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

@mixin task-item__button($bg-color, $icon-group , $text) {
  @extend %i-task-item__button;
  @include colorize-all($gray-scale-0, $bg-color);
  &:before {
    content: '';
    display: inline-block;
    @include retina-sprite($icon-group);
    text-align: center;
  }
  &:after {
    content: $text;
    display: block;
    margin-top: 5px;
  }
}

.task-item {
  position: relative;
  display: table;
  line-height: normal;
  border-bottom: 0;

  &__checkbox {
    @extend %i-task-item-col;
    text-align: center;
    width: $checkbox-width;
    min-width: $checkbox-width;
  }

  //region info section

  &__info {
    @extend %i-task-item-col;
    text-align: left;
    padding-top: 2px;
  }

  &__name {
    @include font-regular(15px);
    display: block;

    @extend %text-in-one-line;
    max-width: $tablet-min-width - $menu-width - $checkbox-width - $notification-width;

    @include media-tablet() {
      max-width: $desktop-min-width - $menu-width - $checkbox-width - $notification-width - 5;
    }
    @include media-desktop() {
      max-width: $desktop-max-width - $menu-width - $checkbox-width - $notification-width - 2*$task-item__button-width;
    }
  }

  //endregion

  //region notification area

  &__notification {
    @extend %i-task-item-col;
    width: $notification-width;
    min-width: $notification-width;
    text-align: left;
  }

  //endregion

  &__label {
    @include font-semi-bold(9px);
    display: block;
    color: $gray-scale-3;
    text-transform: uppercase;

    @extend %text-in-one-line;
    max-width: 200px;

    &_project, &_date, &_access-time {
      margin-top: 4px;
    }

    &_date {
      @include before-icon($icon-today-group);
    }

    &_notification {
      @include before-icon($icon-notifications-none-group);
    }

    &_access-time {
      @include before-icon($icon-access-time-group);
    }
  }

  //region overlap buttons group

  &__buttons {
    display: none;
    &_active {
      position: absolute;
      display: block;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-color: $hover-color;
    }

    @include media-desktop() {
      @extend %i-task-item-col;
      display: table-cell;
      width: $task-item__button-width *2;
      min-width: $task-item__button-width *2;
      border-bottom: 0;
      padding-bottom: 1px;

      &_active {
        position: static;
      }
    }
  }

  @include media-desktop() {
    &:first-child &__buttons {
      padding-top: 1px;
    }

    &:last-child &__buttons {
      padding-bottom: 0;
    }
  }

  &__edit {
    @include task-item__button($color-green, $icon-pencil-group, 'edit');
  }

  &__start {
    @include task-item__button($color-blue, $icon-triangle-group, 'start');
  }

  //endregion
}

